src/webview/css/static/app.css
html,
body {
  height: 100%;
  background-color: white !important;
  color: black !important;
  padding: 1px;
  display: flex;
  flex-direction: column;
  scrollbar-gutter: stable both-edges;
}

body * {
  font-size: var(--vscode-editor-font-size);
  line-height: 1.4;
}

body footer {
  position: sticky;
  bottom: 0px;
  padding: 6px 8px 4px 8px;
  border-top: 1px solid #eee;
  margin-top: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  background-color: white !important;
  z-index: 1;
}

#viewed-indicator {
  font-size: smaller;
  margin-right: 8px;
}

#viewed-progress-container {
  height: 12px;
  width: 128px;
  margin-right: 8px;
  border-radius: 3px;
  background: lightgray;
}

#viewed-progress {
  height: 100%;
  width: 0;
  border-radius: 3px;
  background: #1f6fea;
  transition: width 0.4s ease;
}

#mark-all-viewed-container {
  user-select: none;
  display: flex;
  align-items: center;
  border: 1px solid #ddd;
  border-radius: 3px;
  cursor: pointer;
  font-size: smaller;
  justify-content: flex-end;
  padding: 2px 6px;
}

.selected {
  background-color: #c8e1ff;
}

/* showing "Changed since last view" message */
label.d2h-file-collapse {
  position: relative;
}

body input.changed-since-last-view:before {
  content: "Changed since last view";
  white-space: pre;
  position: absolute;
  bottom: 100%;
  right: -0.5em;
  padding: 0.25em 0.5em;
  border-radius: 1em;
  border: solid thin #c60;
  background: white;
  color: #930;
  font-size: 90%;
}

#loading-container,
#empty-message-container {
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: fixed;
  display: block;
  background-color: #fff;
  z-index: 99;
  text-align: center;
}

#loading-container > span,
#empty-message-container > span {
  position: absolute;
  top: 50%;
  left: 50%;
  text-align: center;
  z-index: 100;
}

#loading-container > span {
  animation: blink 1.5s linear infinite;
}

@keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

